objects/redwing__Training_Plan_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan__c</fullName>
        <label>Learning Plan</label>
        <referenceTo>redwing__Training_Plan__c</referenceTo>
        <relationshipLabel>Learning Plan Feedback</relationshipLabel>
        <relationshipName>Training_Plan_Feedbacks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Plan_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Learning Plan Feedback</label>
    <nameField>
        <displayFormat>LPF-{0000000}</displayFormat>
        <label>Learning Plan Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>